<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/acLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaComumFragment">

    <EditText
        android:id="@+id/etNomeAC"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataAC"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/dataNascimento"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAC" />

    <EditText
        android:id="@+id/etBairroAC"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAcademiaAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataAC" />

    <EditText
        android:id="@+id/etAcademiaAC"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/academia"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etRecordeAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAC" />

    <EditText
        android:id="@+id/etRecordeAC"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/recorde"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAcademiaAC" />

    <Button
        android:id="@+id/btnCadastrarAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toTopOf="@+id/tvListaAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRecordeAC" />

    <TextView
        android:id="@+id/tvListaAC"
        android:layout_width="310dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarAC" />

</androidx.constraintlayout.widget.ConstraintLayout>